一些兼容问题

--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -239,7 +239,7 @@
 					</div>
 				</div>
 				<div class="mod-block mod-weibo">
-					
+					<div class="mod-weibo-title"></div>
 				</div>
 				<div class="mod-block mod-block-company">
 					<p>
