--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:wb=“http://open.weibo.com/wb”>
 <head>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="keywords" />
@@ -8,6 +8,7 @@
 	<link rel="shortcut icon"  href="http://himg2.huanqiu.com/statics/images/favicon1.ico"/>
 	<link rel="stylesheet" href="dist/css/index.css">
 	<script type="text/javascript" src="http://himg2.huanqiu.com/statics/hq2013/js/lib/jquery1.9.1.js"></script>
+	<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<!--#include file="/ssi/contentssi/hq2016_pubhead.ssi"-->
@@ -240,6 +241,7 @@
 				</div>
 				<div class="mod-block mod-weibo">
 					<div class="mod-weibo-title"></div>
+					<wb:topic column="n" border="y" width="960" height="925" tags="%E5%8D%9A%E8%A7%88%E9%9F%A9%E5%9B%BD" language="zh_cn" version="base" refer="y" footbar="y" url="%23" filter="y" ></wb:topic>
 				</div>
 				<div class="mod-block mod-block-company">
 					<p>
