一些兼容问题

--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -193,7 +193,7 @@
 							</a>			
 						</div>
 					</div>
-					<div class="riding-block-row">
+					<div class="riding-block-row last-block-row">
 						<div class="riding-block-6">
 							<p class="riding-title-row">
 								第
@@ -244,6 +244,7 @@
 					<wb:topic column="n" border="y" width="960" height="925" tags="%E5%8D%9A%E8%A7%88%E9%9F%A9%E5%9B%BD" language="zh_cn" version="base" refer="y" footbar="y" url="%23" filter="y" ></wb:topic>
 				</div>
 				<div class="mod-block mod-block-company">
+					<div class="mod-company-title"></div>
 					<p>
 						<a href="">环球财经</a>
 						<a href="">和讯</a>
