一些兼容修改

--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -25,27 +25,27 @@
 						<!-- <div class="focus_container"> -->
 							<ul class="focus_thumbs">
 								<li>
-									<a href="#" class="items">
+									<a href="#" class="items" target="_blank">
 										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
-										<p class="title">焦点图01图片标题</p>
+										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="items">
+									<a href="#" class="items" target="_blank">
 										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
-										<p class="title">焦点图02图片标题</p>
+										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="items">
+									<a href="#" class="items" target="_blank">
 										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
-										<p class="title">焦点图03图片标题</p>
+										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="items">
+									<a href="#" class="items" target="_blank">
 										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
-										<p class="title">焦点图04图片标题</p>
+										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 							</ul> 
@@ -55,70 +55,70 @@
 						<!-- </div> -->
 					</div>
 					<div class="mod-dynic">
-						<div class="bd">活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</div>
+						<div class="bd">活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简</div>
 					</div>
 				</div>
 				<div class="mod-block mod-route">
 					<p class="route-title"></p>
-					<span class="route-add chishui">赤水<br>
+					<a href="#" target="_blank"><span class="route-add chishui">赤水<br>
 						<small>CHISHUI</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-					</span>
-					<span class="route-add xishui">习水<br>
+					</span></a>
+					<a href="#" target="_blank"><span class="route-add xishui">习水<br>
 						<small>XISHUI</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-					</span>
-					<span class="route-add tongzi">桐梓<br>
+					</span></a>
+					<a href="#" target="_blank"><span class="route-add tongzi">桐梓<br>
 						<small>TONGZI</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
-					<span class="route-add zunyi">遵义<br>
+						</span></a>
+					<a href="#" target="_blank"><span class="route-add zunyi">遵义<br>
 						<small>ZUNYI</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
-					<span class="route-add wengan">瓮安<br>
+						</span></a>
+					<a href="#" target="_blank"><span class="route-add wengan">瓮安<br>
 						<small>WENG'AN</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
-					<span class="route-add yuqing">余庆<br>
+						</span></a>
+					<a href="#" target="_blank"><span class="route-add yuqing">余庆<br>
 						<small>YUQING</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
-					<span class="route-add zhenyuan">镇远<br>
+						</span></a>
+					<a href="#" target="_blank"><span class="route-add zhenyuan">镇远<br>
 						<small>ZHENYUAN</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
-					<span class="route-add liping">黎平<br>
+						</span></a>
+					<a href="#" target="_blank"><span class="route-add liping">黎平<br>
 						<small>LIPING</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
-							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容</p>
+							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span>
+						</span></a>
 				</div>
 				<div class="mod-block mod-riding">
-					<p class="mod-riding-more"><a href="#" >更多&nbsp;></a></p>
+					<p class="mod-riding-more"><a href="#" target="_blank">更多&nbsp;></a></p>
 					<div class="riding-block-row">
 						<div class="riding-block-1">
 							<p class="riding-title-row">
@@ -128,10 +128,10 @@
 								&nbsp;
 								<span class="riding-title-addr">黎平</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-1.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简六七八九十活动内容简介一二三四六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九</p>
 							</a>
 						</div>
 						<div class="riding-block-2">
@@ -142,17 +142,17 @@
 								&nbsp;
 								<span class="riding-title-addr">镇远</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-2.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻五六七八九十新闻内容简介一二三四五六七八九十</p>
 							</a>
 						</div>
 						<div class="riding-block-3">						
-							<a href="" class="riding-block-link">
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>	
+							<a href="" class="riding-block-link" target="_blank">
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容九十新闻内容简介一二三四五六七八九四五六七八九十活动内容简介一二三四五六容简介一二三四五六七八九十</p>
+								<img src="dist/images/photo-3.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>	
 							</a>
 							<p class="riding-title-row">
 								第
@@ -172,10 +172,10 @@
 								&nbsp;
 								<span class="riding-title-addr">瓮安</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-4.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二六七八九十二三四五六七八九十二三四五六七八九十新闻内容简介一二三四五六七八十</p>
 							</a>
 						</div>
 						<div class="riding-block-5">
@@ -186,10 +186,10 @@
 								&nbsp;
 								<span class="riding-title-addr">遵义</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-5.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内一二三四五六七八九十二三四五六七八九十二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
 							</a>			
 						</div>
 					</div>
@@ -202,10 +202,10 @@
 								&nbsp;
 								<span class="riding-title-addr">桐梓</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-6.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
 							</a>		
 						</div>
 						<div class="riding-block-8">
@@ -216,17 +216,17 @@
 								&nbsp;
 								<span class="riding-title-addr">赤水</span>
 							</p>
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-8.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九二三四五六七八九十二三四五六七八九十十活动内容简介一二三四五六七八九十新闻内容简介一二三四二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
 							</a>
 						</div>
 						<div class="riding-block-7">
-							<a href="" class="riding-block-link">
-								<img src="dist/images/map.png" alt="">
-								<p class="riding-link-title">这里是图片标题</p>
-								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十</p>
+							<a href="" class="riding-block-link" target="_blank">
+								<img src="dist/images/photo-7.png" alt="">
+								<p class="riding-link-title">新闻标题一新闻标题二新闻标题三</p>
+								<p class="riding-link-info">一二三四五六七八九十新闻内容简介一二三四五六七八九十新闻内容简介一二三四五六七八九十活动内容简介一二三四五六七八九十新闻内容简介一九十新介一九十新闻内容简介一二三四内容简介一二三四内容简介一二三四五六七八九十</p>
 							</a>
 							<p class="riding-title-row">
 								第
@@ -246,9 +246,9 @@
 				<div class="mod-block mod-block-company">
 					<div class="mod-company-title"></div>
 					<p>
-						<a href="">环球财经</a>
-						<a href="">和讯</a>
-						<a href="">新浪财经</a>
+						<a href="#" target="_blank">环球财经</a>
+						<a href="#" target="_blank">和讯</a>
+						<a href="#" target="_blank">新浪财经</a>
 					</p>
 				</div>
 			</div>
