加入微博代码

--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:wb=“http://open.weibo.com/wb”>
 <head>
 	<meta charset="UTF-8">
-	<meta name="keywords" content="keywords" />
-	<meta name="description" content="description" />
+	<meta name="keywords" content="环球网 穿越贵州" />
+	<meta name="description" content="沿着红军足迹，穿越多彩贵州" />
 	<title>沿着红军足迹 穿越多彩贵州</title>
 	<link rel="shortcut icon"  href="http://himg2.huanqiu.com/statics/images/favicon1.ico"/>
 	<link rel="stylesheet" href="dist/css/index.css">
@@ -26,25 +26,25 @@
 							<ul class="focus_thumbs">
 								<li>
 									<a href="#" class="items" target="_blank">
-										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
+										<img src="dist/images/lunbo.png" alt="焦点图01图片说明">
 										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
 									<a href="#" class="items" target="_blank">
-										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
+										<img src="dist/images/lunbo.png" alt="焦点图01图片说明">
 										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
 									<a href="#" class="items" target="_blank">
-										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
+										<img src="dist/images/lunbo.png" alt="焦点图01图片说明">
 										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
 								<li>
 									<a href="#" class="items" target="_blank">
-										<img src="//himg2.huanqiu.com/attachment2010/2016/0520/10/44/20160520104445132.jpg" alt="焦点图01图片说明">
+										<img src="dist/images/lunbo.png" alt="焦点图01图片说明">
 										<p class="title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
 									</a>
 								</li>
@@ -118,7 +118,7 @@
 						</span></a>
 				</div>
 				<div class="mod-block mod-riding">
-					<p class="mod-riding-more"><a href="#" target="_blank">更多&nbsp;></a></p>
+					<p class="mod-riding-more"><a href="http://finance.huanqiu.com/guiyang201609/" target="_blank">更多&nbsp;></a></p>
 					<div class="riding-block-row">
 						<div class="riding-block-1">
 							<p class="riding-title-row">
@@ -319,6 +319,6 @@
 	</div>
 	<!-- /end 公共底部 -->
 
-	<script type="text/javascript" src="./dist/js/lunbo.js"></script>
+	<script type="text/javascript" src="dist/js/lunbo.js"></script>
 </body>
 </html>
