修改链接在新页面打开

--- a/finance_xian/index.html
+++ b/finance_xian/index.html
@@ -63,7 +63,7 @@
 					<div class="mod-reports-title"></div>
 					<div class="reports-content">
 						<div class="report-block">
-							<a href="#">
+							<a href="#" target="_blank">
 								<img src="dist/images/photo-1.png" alt="">
 								<div class="report-one">
 									<p class="report-title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
@@ -72,7 +72,7 @@
 							</a>
 						</div>
 						<div class="report-block">
-							<a href="#">
+							<a href="#" target="_blank">
 								<img src="dist/images/photo-1.png" alt="">
 								<div class="report-one">
 									<p class="report-title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
@@ -81,7 +81,7 @@
 							</a>
 						</div>
 						<div class="report-block">
-							<a href="#">
+							<a href="#" target="_blank">
 								<img src="dist/images/photo-1.png" alt="">
 								<div class="report-one">
 									<p class="report-title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
@@ -90,7 +90,7 @@
 							</a>
 						</div>
 						<div class="report-block">
-							<a href="#">
+							<a href="#" target="_blank">
 								<img src="dist/images/photo-1.png" alt="">
 								<div class="report-one last-row">
 									<p class="report-title">新闻标题一新闻标题一新闻标题一新闻标题一一二</p>
