修改贵阳样式

--- a/finance_guiyang/index.html
+++ b/finance_guiyang/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="mod-block mod-route">
 					<p class="route-title"></p>
-					<a href="#" target="_blank"><span class="route-add chishui">赤水<br>
+					<!-- <a href="#" target="_blank"><span class="route-add chishui">赤水<br>
 						<small>CHISHUI</small>
 						<div class="route-add-more chishui-more">
 							<p class="add-more-title">第三站·余庆</p>
@@ -115,7 +115,7 @@
 							<p class="add-more-title">第三站·余庆</p>
 							<p class="add-more-info">这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是一大堆内容呢容这里是一大堆内容这里是一大堆内容这里是一大堆内容这里是</p>
 						</div>
-						</span></a>
+						</span></a> -->
 				</div>
 				<div class="mod-block mod-riding">
 					<p class="mod-riding-more"><a href="http://finance.huanqiu.com/guiyang201609/" target="_blank">更多&nbsp;></a></p>
