修改图片为svg

--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -14,7 +14,20 @@
   <!-- header -->
   <header>
       <a href="" class="header-logo"></a>
-      <a href="" class="header-user"><img src="dist/images/Page 1 Copy 3.svg" alt=""></a>
+      <a href="" class="header-user">
+        <!-- <img src="dist/images/Page 1 Copy 3.svg" alt=""> -->
+        <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="首页（色条，老logo）" transform="translate(-581.000000, -139.000000)">
+              <g id="Page-1-Copy-3" transform="translate(581.000000, 139.000000)">
+                <path d="M6.21873171,26.7251122 C8.89529756,29.1619122 12.3639415,30.5038049 15.9843902,30.5038049 C19.6040585,30.5038049 23.0742634,29.1603122 25.7532488,26.7226927 L25.9218732,26.5700683 L25.8419512,26.3566439 C24.3226537,22.2343024 20.3608976,19.4657951 15.9843902,19.4657951 C11.6094439,19.4657951 7.64854634,22.2359024 6.12760976,26.3582439 L6.05010732,26.5708488 L6.21873171,26.7251122 Z M15.9843902,31.9687805 C7.17061463,31.9687805 0,24.7981659 0,15.9843902 C0,7.17061463 7.17061463,0 15.9843902,0 C24.7981659,0 31.9687805,7.17061463 31.9687805,15.9843902 C31.9687805,24.7981659 24.7981659,31.9687805 15.9843902,31.9687805 L15.9843902,31.9687805 Z" id="Fill-1" fill="#D2D2D2"></path>
+                <path d="M15.863479,7 C12.629942,7 10,9.63095477 10,12.8644917 C10,16.0969653 12.6310054,18.7269073 15.863479,18.7269073 C19.0959525,18.7269073 21.7279707,16.0969653 21.7279707,12.8644917 C21.726958,9.63095477 19.0959525,7 15.863479,7" id="Fill-3" fill="#FFFFFF"></path>
+              </g>
+            </g>
+          </g>
+        </svg>
+      </a>
       <a href="" class="header-small">电脑版</a>
   </header>
   <!-- /header -->
@@ -92,7 +105,25 @@
     <!-- live -->
     <section class="live">
       <span class="live-logo">
-        <img src="dist/images/Group 10.svg" alt="">
+        <!-- <img src="dist/images/Group 10.svg" alt=""> -->
+        <svg width="78px" height="34px" viewBox="0 0 78 34" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="首页（色条，老logo）" transform="translate(-23.000000, -691.000000)">
+                    <g id="Group-10" transform="translate(23.000000, 691.000000)">
+                        <path d="M63.0054443,33.6184672 L6.01409672,33.6184672 C2.70642108,33.6184672 -5.34876399e-05,30.9309976 -5.34876399e-05,27.6462241 L-5.34876399e-05,6.23782954 C-5.34876399e-05,2.95305602 2.70642108,0.265586475 6.01409672,0.265586475 L63.0054443,0.265586475 C66.3131199,0.265586475 69.0193271,2.95305602 69.0193271,6.23782954 L69.0193271,27.6462241 C69.0193271,30.9309976 66.3131199,33.6184672 63.0054443,33.6184672" id="Fill-1" fill="#4A4A4A"></path>
+                        <polygon id="Fill-4" fill="#4A4A4A" points="77.8601921 31.4188269 53.1226936 16.9419737 77.8601921 2.46512054"></polygon>
+                        <polygon id="Fill-7" fill="#FFFFFF" points="11.6069935 7.91822821 11.6069935 23.2129899 19.0378296 23.2129899 19.0378296 24.9191453 6.3614782 24.9191453 6.3614782 7.91822821"></polygon>
+                        <polygon id="Fill-9" fill="#FFFFFF" points="20.1637225 24.919095 25.4090186 24.919095 25.4090186 7.91817789 20.1637225 7.91817789"></polygon>
+                        <polygon id="Fill-11" fill="#FFFFFF" points="41.5821464 7.91822821 36.3368503 24.9191453 31.6345414 24.9191453 26.8397253 7.91822821 32.1378514 7.91822821 35.7142892 20.7965443 39.6219559 7.91822821"></polygon>
+                        <polygon id="Fill-12" fill="#FFFFFF" points="54.669125 7.91822821 54.669125 9.62463529 48.1916403 9.62463529 48.1916403 14.7685141 53.6355421 14.7685141 53.6355421 16.4749212 48.1916403 16.4749212 48.1916403 23.2129899 55.7682522 23.2129899 55.7682522 24.9191453 42.9463442 24.9191453 42.9463442 7.91822821"></polygon>
+                        <text id="+" font-family="FZLTZHK--GBK1-0, FZLanTingHei-DB-GBK" font-size="14" font-weight="normal" fill="#F7F7F7">
+                            <tspan x="57" y="17">+</tspan>
+                        </text>
+                    </g>
+                </g>
+            </g>
+        </svg>
       </span>
       <p class="live-item">首页新闻国际首页新闻国际首页新</p>
     </section>
@@ -107,11 +138,36 @@
           <span class="news-label news-label-lvxing">旅行</span>
           <span class="news-from">人民网</span>
           <div class="news-comm">
-            <img src="dist/images/comm.svg" alt="">
+            <!-- <img src="dist/images/comm.svg" alt=""> -->
+            <svg width="13px" height="12px" viewBox="0 0 13 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="首页（色条，老logo）" transform="translate(-142.000000, -879.000000)" stroke="#979797">
+                      <g id="Group-8" transform="translate(20.000000, 875.000000)">
+                          <g id="评论" transform="translate(123.000000, 5.000000)">
+                              <g id="Page-1">
+                                  <path d="M8.24685011,0 L2.7488434,0 C1.23655257,0 0,1.2262561 0,2.72446341 L0,4.5409878 C0,6.03918293 1.23655257,7.26545122 2.7488434,7.26545122 L3.20702908,7.26545122 L3.20702908,9.9902439 L6.34846421,7.26578049 L8.24685011,7.26578049 C9.75879642,7.26578049 10.9956935,6.03952439 10.9956935,4.54132927 L10.9956935,2.72446341 C10.996038,1.2262561 9.75879642,0 8.24685011,0" id="Fill-1"></path>
+                              </g>
+                          </g>
+                      </g>
+                  </g>
+              </g>
+            </svg>
             <span>9999</span>
           </div>
           <div class="news-close-btn">
-            <img src="dist/images/Group.svg" alt="">
+            <!-- <img src="dist/images/Group.svg" alt=""> -->
+            <svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+              <g id="icon-不感兴趣" transform="translate(-9.000000, -4.000000)" stroke="#D3D3D3">
+                <g id="Group" transform="translate(9.000000, 4.000000)">
+                  <path d="M7.5,0.5 L0.5,7.5" id="Line"></path>
+                  <path d="M0.5,0.5 L7.5,7.5" id="Line-Copy"></path>
+                </g>
+              </g>
+            </g>
+          </svg>
           </div>
         </div>
       </div>
@@ -128,11 +184,36 @@
           <span class="news-label news-label-lvxing">旅行</span>
           <span class="news-from">人民网</span>
           <div class="news-comm">
-            <img src="dist/images/comm.svg" alt="">
+            <!-- <img src="dist/images/comm.svg" alt=""> -->
+            <svg width="13px" height="12px" viewBox="0 0 13 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="首页（色条，老logo）" transform="translate(-142.000000, -879.000000)" stroke="#979797">
+                      <g id="Group-8" transform="translate(20.000000, 875.000000)">
+                          <g id="评论" transform="translate(123.000000, 5.000000)">
+                              <g id="Page-1">
+                                  <path d="M8.24685011,0 L2.7488434,0 C1.23655257,0 0,1.2262561 0,2.72446341 L0,4.5409878 C0,6.03918293 1.23655257,7.26545122 2.7488434,7.26545122 L3.20702908,7.26545122 L3.20702908,9.9902439 L6.34846421,7.26578049 L8.24685011,7.26578049 C9.75879642,7.26578049 10.9956935,6.03952439 10.9956935,4.54132927 L10.9956935,2.72446341 C10.996038,1.2262561 9.75879642,0 8.24685011,0" id="Fill-1"></path>
+                              </g>
+                          </g>
+                      </g>
+                  </g>
+              </g>
+            </svg>
             <span>9999</span>
           </div>
           <div class="news-close-btn">
-            <img src="dist/images/Group.svg" alt="">
+            <!-- <img src="dist/images/Group.svg" alt=""> -->
+            <svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+              <g id="icon-不感兴趣" transform="translate(-9.000000, -4.000000)" stroke="#D3D3D3">
+                <g id="Group" transform="translate(9.000000, 4.000000)">
+                  <path d="M7.5,0.5 L0.5,7.5" id="Line"></path>
+                  <path d="M0.5,0.5 L7.5,7.5" id="Line-Copy"></path>
+                </g>
+              </g>
+            </g>
+          </svg>
           </div>
         </div>
       </div>
@@ -158,11 +239,36 @@
         <span class="news-label news-label-lvxing">旅行</span>
         <span class="news-from">人民网</span>
         <div class="news-comm">
-          <img src="dist/images/comm.svg" alt="">
+          <!-- <img src="dist/images/comm.svg" alt=""> -->
+          <svg width="13px" height="12px" viewBox="0 0 13 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="首页（色条，老logo）" transform="translate(-142.000000, -879.000000)" stroke="#979797">
+                    <g id="Group-8" transform="translate(20.000000, 875.000000)">
+                        <g id="评论" transform="translate(123.000000, 5.000000)">
+                            <g id="Page-1">
+                                <path d="M8.24685011,0 L2.7488434,0 C1.23655257,0 0,1.2262561 0,2.72446341 L0,4.5409878 C0,6.03918293 1.23655257,7.26545122 2.7488434,7.26545122 L3.20702908,7.26545122 L3.20702908,9.9902439 L6.34846421,7.26578049 L8.24685011,7.26578049 C9.75879642,7.26578049 10.9956935,6.03952439 10.9956935,4.54132927 L10.9956935,2.72446341 C10.996038,1.2262561 9.75879642,0 8.24685011,0" id="Fill-1"></path>
+                            </g>
+                        </g>
+                    </g>
+                </g>
+            </g>
+          </svg>
           <span>9999</span>
         </div>
         <div class="news-close-btn">
-          <img src="dist/images/Group.svg" alt="">
+          <!-- <img src="dist/images/Group.svg" alt=""> -->
+          <svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+              <g id="icon-不感兴趣" transform="translate(-9.000000, -4.000000)" stroke="#D3D3D3">
+                <g id="Group" transform="translate(9.000000, 4.000000)">
+                  <path d="M7.5,0.5 L0.5,7.5" id="Line"></path>
+                  <path d="M0.5,0.5 L7.5,7.5" id="Line-Copy"></path>
+                </g>
+              </g>
+            </g>
+          </svg>
         </div>
       </div>
     </section>
@@ -218,11 +324,36 @@
         <span class="news-label news-label-lvxing">旅行</span>
         <span class="news-from">人民网</span>
         <div class="news-comm">
-          <img src="dist/images/comm.svg" alt="">
+          <!-- <img src="dist/images/comm.svg" alt=""> -->
+          <svg width="13px" height="12px" viewBox="0 0 13 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="首页（色条，老logo）" transform="translate(-142.000000, -879.000000)" stroke="#979797">
+                    <g id="Group-8" transform="translate(20.000000, 875.000000)">
+                        <g id="评论" transform="translate(123.000000, 5.000000)">
+                            <g id="Page-1">
+                                <path d="M8.24685011,0 L2.7488434,0 C1.23655257,0 0,1.2262561 0,2.72446341 L0,4.5409878 C0,6.03918293 1.23655257,7.26545122 2.7488434,7.26545122 L3.20702908,7.26545122 L3.20702908,9.9902439 L6.34846421,7.26578049 L8.24685011,7.26578049 C9.75879642,7.26578049 10.9956935,6.03952439 10.9956935,4.54132927 L10.9956935,2.72446341 C10.996038,1.2262561 9.75879642,0 8.24685011,0" id="Fill-1"></path>
+                            </g>
+                        </g>
+                    </g>
+                </g>
+            </g>
+          </svg>
           <span>9999</span>
         </div>
         <div class="news-close-btn">
-          <img src="dist/images/Group.svg" alt="">
+          <!-- <img src="dist/images/Group.svg" alt=""> -->
+          <svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 40 (33762) - http://www.bohemiancoding.com/sketch -->
+            <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+              <g id="icon-不感兴趣" transform="translate(-9.000000, -4.000000)" stroke="#D3D3D3">
+                <g id="Group" transform="translate(9.000000, 4.000000)">
+                  <path d="M7.5,0.5 L0.5,7.5" id="Line"></path>
+                  <path d="M0.5,0.5 L7.5,7.5" id="Line-Copy"></path>
+                </g>
+              </g>
+            </g>
+          </svg>
         </div>
       </div>
     </section>
